--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
 *,
 *::after,
 *::before {
@@ -18,6 +20,32 @@ body {
   background-color: var(--dark-color);
   overflow: hidden;
   perspective: 1000px;
+}
+
+.greetings, .description {
+  font-family: 'Dancing Script', cursive;
+  color: white;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+  text-align: center;
+  position: relative;
+  z-index: 10;
+}
+
+.greetings {
+    font-size: 5rem;
+    margin-bottom: 1rem;
+}
+
+.description {
+    font-size: 2.5rem;
+}
+
+.description {
+    font-family: 'Dancing Script', cursive;
+}
+
+.message-container p {
+    font-family: 'Dancing Script', cursive;
 }
 
 .night {
@@ -1390,4 +1418,42 @@ body {
 
 .container * {
   animation-play-state: paused !important;
+}
+
+.stars, .twinkling, .clouds {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.stars {
+  background: #000 url(https://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index: 0;
+}
+
+.twinkling {
+  background: transparent url(https://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  z-index: 1;
+  animation: move-twink-back 200s linear infinite;
+}
+
+.clouds {
+  background: transparent url(https://www.script-tutorials.com/demos/360/images/clouds.png) repeat top center;
+  z-index: 2;
+  animation: move-clouds-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+  from {background-position: 0 0;}
+  to {background-position: -10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+  from {background-position: 0 0;}
+  to {background-position: 10000px 0;}
 }
