--- a/main.css
+++ b/main.css
@@ -177,6 +177,14 @@ body {
   -webkit-animation-delay: 1.7s;
   animation-delay: 1.7s;
 }
+.flower__leafs--4 {
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+}
+.flower__leafs--5 {
+  -webkit-animation-delay: 2.3s;
+  animation-delay: 2.3s;
+}
 .flower__leafs::after {
   content: "";
   position: absolute;
@@ -1576,19 +1584,21 @@ audio {
 
 .message-container {
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
   z-index: 100;
   opacity: 0;
   animation: fadeIn 2s ease-in-out 1s forwards;
+  width: 100%;
 }
 
 .message-container p {
-  font-size: 2rem;
-  color: white;
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+  font-size: 4rem;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 0 0 15px #ff69b4, 0 0 25px #ff69b4, 0 0 40px #ff69b4;
 }
 
 @keyframes fadeIn {
