--- a/main.css
+++ b/main.css
@@ -64,7 +64,8 @@ body {
 
 .flowers {
   position: relative;
-  transform: scale(0.9);
+  left: 50%;
+  transform: translateX(-50%) scale(0.9);
 }
 
 .flower {
@@ -1656,23 +1657,29 @@ audio {
   border-radius: 5px; /* Border radius kotak putih */
 }
 
-.message-container {
+.-container {
   position: absolute;
-  top: 25%; /* coba 15% atau 18% supaya pas di tengah atas, di bawah audio */
+  top: 10%; /* coba 15% atau 18% supaya pas di tengah atas, di bawah audio */
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  z-index: 100;
-  animation: fadeIn 2s  ease-in-out 1s forwards;
   width: 100%;
 }
 
 
-.message-container p {
+.-container p {
   font-size: 1.8rem; /* kecil dan rapi */
   color: #fff;
   font-weight: bold;
   text-shadow: 0 0 5px #ff69b4, 0 0 10px #ff69b4, 0 0 15px #ff69b4;
+}
+
+.-container h2 {
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 0 0 5px #ff69b4, 0 0 10px #ff69b4, 0 0 15px #ff69b4;
+  margin-top: 10px;
 }
 
 @keyframes fadeIn {
