--- a/style.css
+++ b/style.css
@@ -11,6 +11,22 @@ body{
     align-items: center;
     justify-content: center;
     background-color: black;
+    position: relative;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('cg4.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.15;
+    z-index: -1;
 }
 .greetings{
     font-size: 6rem;
