--- a/main.css
+++ b/main.css
@@ -252,6 +252,118 @@ body {
    -webkit-animation-delay: 2.3s;
    animation-delay: 2.3s;
  }
+.flower--6 {
+   left: 30%;
+   top: 15%;
+   transform: rotate(90deg) scale(0.7);
+   -webkit-animation: moving-flower-6 4s linear infinite;
+   animation: moving-flower-6 4s linear infinite;
+ }
+.flower--6 .flower__line {
+   height: 40vmin;
+   -webkit-animation-delay: 1.8s;
+   animation-delay: 1.8s;
+ }
+.flower--6 .flower__line__leaf--1 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 3.8s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 3.8s backwards;
+ }
+.flower--6 .flower__line__leaf--2 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 3.6s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 3.6s backwards;
+ }
+.flower--6 .flower__line__leaf--3 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 3.4s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 3.4s backwards;
+ }
+.flower--6 .flower__line__leaf--4 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 3.2s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 3.2s backwards;
+ }
+.flower--6 .flower__line__leaf--5 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 4s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 4s backwards;
+ }
+.flower--6 .flower__line__leaf--6 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 4.2s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 4.2s backwards;
+ }
+.flower--7 {
+   left: 80%;
+   top: 25%;
+   transform: rotate(-60deg) scale(0.6);
+   -webkit-animation: moving-flower-7 3.5s linear infinite;
+   animation: moving-flower-7 3.5s linear infinite;
+ }
+.flower--7 .flower__line {
+   height: 35vmin;
+   -webkit-animation-delay: 2.1s;
+   animation-delay: 2.1s;
+ }
+.flower--7 .flower__line__leaf--1 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 4.4s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 4.4s backwards;
+ }
+.flower--7 .flower__line__leaf--2 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 4.2s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 4.2s backwards;
+ }
+.flower--7 .flower__line__leaf--3 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 4s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 4s backwards;
+ }
+.flower--7 .flower__line__leaf--4 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 3.8s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 3.8s backwards;
+ }
+.flower--8 {
+   left: 10%;
+   top: 35%;
+   transform: rotate(120deg) scale(0.8);
+   -webkit-animation: moving-flower-8 5.5s linear infinite;
+   animation: moving-flower-8 5.5s linear infinite;
+ }
+.flower--8 .flower__line {
+   height: 45vmin;
+   -webkit-animation-delay: 2.4s;
+   animation-delay: 2.4s;
+ }
+.flower--8 .flower__line__leaf--1 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 4.8s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 4.8s backwards;
+ }
+.flower--8 .flower__line__leaf--2 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 4.6s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 4.6s backwards;
+ }
+.flower--8 .flower__line__leaf--3 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 4.4s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 4.4s backwards;
+ }
+.flower--8 .flower__line__leaf--4 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 4.2s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 4.2s backwards;
+ }
+.flower--8 .flower__line__leaf--5 {
+   -webkit-animation: blooming-leaf-right var(--fl-speed) 5s backwards;
+   animation: blooming-leaf-right var(--fl-speed) 5s backwards;
+ }
+.flower--8 .flower__line__leaf--6 {
+   -webkit-animation: blooming-leaf-left var(--fl-speed) 5.2s backwards;
+   animation: blooming-leaf-left var(--fl-speed) 5.2s backwards;
+ }
+.flower__leafs--6 {
+   -webkit-animation-delay: 2.6s;
+   animation-delay: 2.6s;
+ }
+.flower__leafs--7 {
+   -webkit-animation-delay: 2.9s;
+   animation-delay: 2.9s;
+ }
+.flower__leafs--8 {
+   -webkit-animation-delay: 3.2s;
+   animation-delay: 3.2s;
+ }
 .flower__leafs {
   position: relative;
   -webkit-animation: blooming-flower 2s backwards;
@@ -593,6 +705,33 @@ body {
    z-index: 5;
    -webkit-animation: moving-grass--4 1.8s linear infinite;
    animation: moving-grass--4 1.8s linear infinite;
+ }
+.flower__grass--5 {
+   left: -15vmin;
+   bottom: 20vmin;
+   transform: scale(0.5) rotate(-45deg) rotateY(45deg);
+   opacity: 0.8;
+   z-index: 12;
+   -webkit-animation: moving-grass--5 2.5s linear infinite;
+   animation: moving-grass--5 2.5s linear infinite;
+ }
+.flower__grass--6 {
+   left: 15vmin;
+   bottom: 25vmin;
+   transform: scale(0.3) rotate(135deg) rotateX(20deg) rotateY(-90deg);
+   opacity: 0.6;
+   z-index: 8;
+   -webkit-animation: moving-grass--6 2s linear infinite;
+   animation: moving-grass--6 2s linear infinite;
+ }
+.flower__grass--7 {
+   left: 25vmin;
+   bottom: 15vmin;
+   transform: scale(0.4) rotate(60deg) rotateY(30deg);
+   opacity: 0.9;
+   z-index: 15;
+   -webkit-animation: moving-grass--7 1.5s linear infinite;
+   animation: moving-grass--7 1.5s linear infinite;
  }
 .flower__grass--top {
   width: 7vmin;
@@ -1693,6 +1832,60 @@ body {
      transform: scale(0.4) rotate(92deg) rotateX(-15deg) rotateY(180deg);
    }
  }
+@-webkit-keyframes moving-grass--5 {
+   0%,
+   100% {
+     transform: scale(0.5) rotate(-45deg) rotateY(45deg);
+   }
+   50% {
+     transform: scale(0.5) rotate(-47deg) rotateY(45deg);
+   }
+ }
+@keyframes moving-grass--5 {
+   0%,
+   100% {
+     transform: scale(0.5) rotate(-45deg) rotateY(45deg);
+   }
+   50% {
+     transform: scale(0.5) rotate(-47deg) rotateY(45deg);
+   }
+ }
+@-webkit-keyframes moving-grass--6 {
+   0%,
+   100% {
+     transform: scale(0.3) rotate(135deg) rotateX(20deg) rotateY(-90deg);
+   }
+   50% {
+     transform: scale(0.3) rotate(137deg) rotateX(20deg) rotateY(-90deg);
+   }
+ }
+@keyframes moving-grass--6 {
+   0%,
+   100% {
+     transform: scale(0.3) rotate(135deg) rotateX(20deg) rotateY(-90deg);
+   }
+   50% {
+     transform: scale(0.3) rotate(137deg) rotateX(20deg) rotateY(-90deg);
+   }
+ }
+@-webkit-keyframes moving-grass--7 {
+   0%,
+   100% {
+     transform: scale(0.4) rotate(60deg) rotateY(30deg);
+   }
+   50% {
+     transform: scale(0.4) rotate(62deg) rotateY(30deg);
+   }
+ }
+@keyframes moving-grass--7 {
+   0%,
+   100% {
+     transform: scale(0.4) rotate(60deg) rotateY(30deg);
+   }
+   50% {
+     transform: scale(0.4) rotate(62deg) rotateY(30deg);
+   }
+ }
 @-webkit-keyframes moving-flower-4 {
    0%,
    100% {
@@ -1727,6 +1920,60 @@ body {
    }
    50% {
      transform: rotate(-32deg) scale(0.9);
+   }
+ }
+@-webkit-keyframes moving-flower-6 {
+   0%,
+   100% {
+     transform: rotate(90deg) scale(0.7);
+   }
+   50% {
+     transform: rotate(92deg) scale(0.7);
+   }
+ }
+@keyframes moving-flower-6 {
+   0%,
+   100% {
+     transform: rotate(90deg) scale(0.7);
+   }
+   50% {
+     transform: rotate(92deg) scale(0.7);
+   }
+ }
+@-webkit-keyframes moving-flower-7 {
+   0%,
+   100% {
+     transform: rotate(-60deg) scale(0.6);
+   }
+   50% {
+     transform: rotate(-62deg) scale(0.6);
+   }
+ }
+@keyframes moving-flower-7 {
+   0%,
+   100% {
+     transform: rotate(-60deg) scale(0.6);
+   }
+   50% {
+     transform: rotate(-62deg) scale(0.6);
+   }
+ }
+@-webkit-keyframes moving-flower-8 {
+   0%,
+   100% {
+     transform: rotate(120deg) scale(0.8);
+   }
+   50% {
+     transform: rotate(122deg) scale(0.8);
+   }
+ }
+@keyframes moving-flower-8 {
+   0%,
+   100% {
+     transform: rotate(120deg) scale(0.8);
+   }
+   50% {
+     transform: rotate(122deg) scale(0.8);
    }
  }
 .growing-grass {
@@ -1841,7 +2088,7 @@ body {
 
 /* Enhanced flower colors */
 .flower__leaf {
-   background-image: linear-gradient(to top, #54b8aa, #a7ffee, #ff6b9d, #ffb3ba);
+   background-image: linear-gradient(to top, #54b8aa, #a7ffee, #ff6b9d, #ffb3ba, #ffeaa7, #dda0dd);
  }
 
 .flower__line {
@@ -1851,7 +2098,17 @@ body {
        transparent,
        rgba(255, 255, 255, 0.2)
      ),
-     linear-gradient(to top, transparent 10%, #14757a, #39c6d6, #ff6b9d, #ffb3ba);
+     linear-gradient(to top, transparent 10%, #14757a, #39c6d6, #ff6b9d, #ffb3ba, #ffeaa7);
+ }
+
+/* Special flower variations */
+.flower--6 .flower__leaf,
+.flower--7 .flower__leaf {
+   background-image: linear-gradient(to top, #ff6b9d, #ffb3ba, #ffeaa7, #dda0dd, #98d8c8);
+ }
+
+.flower--8 .flower__leaf {
+   background-image: linear-gradient(to top, #dda0dd, #98d8c8, #f7dc6f, #bb8fce, #85c1e9);
  }
 
 /* Additional glow effects */
